# arbeitszeit

./: README.md  pyproject.toml  vanilla.py
arbeitszeit/: __main__.py  main.py
