[tool.poetry]
name = "arbeitszeit"
version = "0.1.1"
description = "Track your worktime."
authors = ["David Härer <david@haerer.dev>"]
readme = "README.md"
repository = "https://github.com/david-haerer/arbeitszeit"
license = "MIT"

[tool.poetry.scripts]
arbeitszeit = "arbeitszeit.__main__:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
appdirs = "^1.4.4"
pyyaml = "^6.0.1"
pydantic = "^2.5.1"
isoweek = "^1.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
